2006-11-28  Alice Liu  <alice.liu@apple.com>

        Reviewed by Maciej.

        A fix for a couple failing layout tests involving copy/cut in iframes.

        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::dataForArchivedSelection):
        Use the frame parameter instead of using the webview's selectedFrame. 

2006-11-28  Beth Dakin  <bdakin@apple.com>

        Reviewed by Geoffff.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11691 REGRESSION 
        (r17399, r17511): WebElementDictionary no longer returns nil 
        NSStrings

        String's NSString* operator converts null Strings to empty 
        NSStrings for compatibility with AppKit. We need to work around 
        that here.

        * Misc/WebElementDictionary.m:
        (NSStringOrNil):
        (-[WebElementDictionary _altDisplayString]):
        (-[WebElementDictionary _spellingToolTip]):
        (-[WebElementDictionary _title]):
        (-[WebElementDictionary _titleDisplayString]):
        (-[WebElementDictionary _textContent]):

2006-11-28  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.

        Fixed <rdar://problem/4844855> Should clarify when to create clients in 
        the WebCore client API
        
        All clients must now be supplied as constructor arguments. This clarifies 
        when you need to create clients, and also guarantees that objects can't 
        (for the most part) be in a clientless state.

        Layout tests pass. No leaks reported.
        
        * WebCoreSupport/WebFrameBridge.mm: Shuffled around initialization and changed
        some arguments to resolve ciruclar dependencies at init time.
        (-[WebFrame _initWithWebFrameView:webView:bridge:]): We no longer call setClient
        here, because the client is set up at construction time.

2006-11-28  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.
