@@ -43,6 +43,9 @@
 + (void)garbageCollectJavaScriptObjects;
 + (void)garbageCollectJavaScriptObjectsOnAlternateThread:(BOOL)waitUntilDone;
 
+// These have been moved to WebCache but need to be around because they're needed by Tiger Safari.
++ (void)emptyCache;
++ (void)setCacheDisabled:(BOOL)disabled;
 
 // deprecated
 + (size_t)javaScriptNoGCAllowedObjectsCount;
